--- a/public/Assests/css/app.css
+++ b/public/Assests/css/app.css
@@ -316,56 +316,105 @@ button:hover{
 }
 /*six section background video text extra*/
 
-/*seven section blog*/
-.section7-blok1{
-    display: flex;
-
-    justify-content: center;
-
-}
-
-.section7-title-text{
-  
-    align-items: center;
-}
-
-.section7-blok2{
+.section6{
     display: flex;
     flex-direction: row;
-    justify-content: space-evenly;
-}
-/*footer*/
-.footer-blok1{
-
-}
-
-.footer-title-text{
-
-}
-
-.scoial-media{
-
-}
-
-.footer-blok2{
-
-}
-
-.footer-articles{
-
-}
-
-
-.footer-blok3{
-
-}
-
-.footer-articles1{
+    justify-content: center;
+    align-items: center;
+    padding: 2rem;
     
 }
 
+/*blog*/
+
+.blog {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.blog-blok1 {
+    text-align: center;
+}
+
+.blog-blok2 {
+    display: flex;
+    justify-content: space-evenly;
+    width: 100%;
+}
+
+.blog-articles {
+    text-align: start;
+    max-width: 300px; /* Adjust this value to fit your needs */
+    margin: 20px;
+}
+
+.blog-articles article {
+    margin-bottom: 20px;
+}
 
 
+/*section*/
+
+.section8{
+    color: white;
+}
+
+.section8-blok1{
+    display: flex;
+    align-items: start;
+    padding: 2rem;
+}
+
+.section8-blok2{
+    display: flex;
+    margin-left: 300px;
+    padding: 2rem;
+}
+
+.social-media{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+
+.social-media ul{
+    list-style-type: none;
+    padding: 0;
+    text-align: center;
+}
+
+.section8-blok3 ul li{
+    display: flex;
+    margin-left: 300px;
+
+    
+}
+
+.section8-articles{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    list-style-type: none;
+    text-align: center;
+}
+
+
+/*footer*/
+footer {
+    background-color: black;
+    color: white;
+    padding: 2rem;
+}
+
+.footer-blok1{  
+    display: flex;
+    flex-direction: column;
+    align-items: left;
+    padding: 2rem;
+    
+}
 
 
 
