--- a/public/Assests/css/app.css
+++ b/public/Assests/css/app.css
@@ -203,6 +203,7 @@ button:hover{
 
 .section1_links li{
     font-size: 24px;
+    list-style-type: none;
 }
 
 /*seconde-section TODO*/
@@ -304,6 +305,8 @@ button:hover{
 }
 
 /*five section review 3 row*/
+
+
 .section5-blok1{
     margin-top: 200px;
     text-align: center;
@@ -314,6 +317,12 @@ button:hover{
     flex-direction: row;
     justify-content: space-around;
 }
+
+.costumer-foto img{
+    width: 20%;
+    height: auto;
+}
+
 /*six section background video text extra*/
 
 .section6{
@@ -331,6 +340,7 @@ button:hover{
     display: flex;
     flex-direction: column;
     align-items: center;
+    margin-top: 200px;
 }
 
 .blog-blok1 {
@@ -340,17 +350,21 @@ button:hover{
 .blog-blok2 {
     display: flex;
     justify-content: space-evenly;
-    width: 100%;
 }
 
 .blog-articles {
-    text-align: start;
-    max-width: 300px; /* Adjust this value to fit your needs */
+    text-align: start; /* Adjust this value to fit your needs */
     margin: 20px;
+   
+}
+.blog-foto img{
+    width: 95%;
+    height: auto;
 }
 
 .blog-articles article {
-    margin-bottom: 20px;
+    margin-bottom: 200px;
+    
 }
 
 
